--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-window": "^2.0.1",
+    "react-window": "^2.0.2",
+    "react-window-infinite-loader": "^1.0.10",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
