--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.1",
+    "localforage": "^1.10.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
-    "react-window": "^2.0.2",
+    "react-window": "^1.8.10",
     "react-window-infinite-loader": "^1.0.10",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
@@ -44,6 +48,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
